...
                }
            }
        }
    }
}

const val SEARCH_TEST_TAG = "candidate_search"
const val LIST_TEST_TAG = "candidate_list"

@ScreenPreviews
@Composable
private fun CandidateListScreenPreview() {
    ColaEleitoralTheme(dynamicColor = false) {
...
